--- a/openstack/prometheus-openstack/values.yaml
+++ b/openstack/prometheus-openstack/values.yaml
@@ -33,6 +33,6 @@ openstack-prometheus:
   serviceAccount:
     create: true
 
-  # alertmanagers:
-  #  - alertmanager.eu-de-1.cloud.sap
-  #  - alertmanager.eu-nl-1.cloud.sap
+  alertmanagers:
+    - alertmanager.eu-de-1.cloud.sap
+    # - alertmanager.eu-nl-1.cloud.sap
