fix infa prometheus config

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -61,9 +61,9 @@ prometheus_infra_collector:
   serviceAccount:
     create: true
 
+  # Send alerts to these alertmanagers.
   alertmanagers:
     - alertmanager.eu-de-1.cloud.sap
-  #  - alertmanager.eu-nl-1.cloud.sap
 
 cloudprober_exporter:
   enabled: false
