[Seeds] Adding neo domain

--- a/openstack/arc/templates/seed.yaml
+++ b/openstack/arc/templates/seed.yaml
@@ -257,6 +257,34 @@ spec:
         role: automation_viewer
         inherited: true
 
+  - name: neo
+    groups:
+    - name: NEO_API_SUPPORT
+      roles:
+      - domain: neo
+        role: automation_admin
+        inherited: true
+    - name: NEO_COMPUTE_SUPPORT
+      roles:
+      - domain: neo
+        role: automation_viewer
+        inherited: true
+    - name: NEO_NETWORK_SUPPORT
+      roles:
+      - domain: neo
+        role: automation_viewer
+        inherited: true
+    - name: NEO_STORAGE_SUPPORT
+      roles:
+      - domain: neo
+        role: automation_viewer
+        inherited: true
+    - name: NEO_SERVICE_DESK
+      roles:
+      - domain: neo
+        role: automation_viewer
+        inherited: true
+
   - name: s4
     groups:
     - name: S4_API_SUPPORT
