--- a/openstack/cinder/templates/seed.yaml
+++ b/openstack/cinder/templates/seed.yaml
@@ -14,6 +14,7 @@ spec:
   - monsoon3/domain-hcp03-seed
   - monsoon3/domain-hec-seed
   - monsoon3/domain-monsoon3-seed
+  - monsoon3/domain-neo-seed
   - monsoon3/domain-s4-seed
   - monsoon3/domain-wbs-seed
 
@@ -381,35 +382,78 @@ spec:
       roles:
       - project: api_support
         role: volume_admin
-      - domain: monsoon3
+      - domain: neo
         role: volume_admin
         inherited: true
     - name: MONSOON3_COMPUTE_SUPPORT
       roles:
       - project: compute_support
         role: volume_admin
-      - domain: monsoon3
+      - domain: neo
         role: volume_viewer
         inherited: true
     - name: MONSOON3_NETWORK_SUPPORT
       roles:
       - project: network_support
         role: volume_admin
-      - domain: monsoon3
+      - domain: neo
         role: volume_viewer
         inherited: true
     - name: MONSOON3_STORAGE_SUPPORT
       roles:
       - project: storage_support
         role: volume_admin
-      - domain: monsoon3
+      - domain: neo
         role: volume_admin
         inherited: true
     - name: MONSOON3_SERVICE_DESK
       roles:
       - project: service_desk
         role: volume_admin
-      - domain: monsoon3
+      - domain: neo
+        role: volume_viewer
+        inherited: true
+
+  - name: neo
+    groups:
+    - name: NEO_DOMAIN_ADMINS
+      roles:
+      - project: cc-demo
+        role: volume_admin
+
+    - name: NEO_API_SUPPORT
+      roles:
+      - project: api_support
+        role: volume_admin
+      - domain: neo
+        role: volume_admin
+        inherited: true
+    - name: NEO_COMPUTE_SUPPORT
+      roles:
+      - project: compute_support
+        role: volume_admin
+      - domain: neo
+        role: volume_viewer
+        inherited: true
+    - name: NEO_NETWORK_SUPPORT
+      roles:
+      - project: network_support
+        role: volume_admin
+      - domain: neo
+        role: volume_viewer
+        inherited: true
+    - name: NEO_STORAGE_SUPPORT
+      roles:
+      - project: storage_support
+        role: volume_admin
+      - domain: neo
+        role: volume_admin
+        inherited: true
+    - name: NEO_SERVICE_DESK
+      roles:
+      - project: service_desk
+        role: volume_admin
+      - domain: neo
         role: volume_viewer
         inherited: true
 
