--- a/openstack/limes/templates/seed.yaml
+++ b/openstack/limes/templates/seed.yaml
@@ -25,6 +25,7 @@ spec:
   - monsoon3/domain-hcp03-seed
   - monsoon3/domain-hec-seed
   - monsoon3/domain-monsoon3-seed
+  - monsoon3/domain-neo-seed
   - monsoon3/domain-s4-seed
   - monsoon3/domain-wbs-seed
 
@@ -154,6 +155,12 @@ spec:
         - domain: monsoon3
           role: resource_admin
 
+    - name: neo
+      groups:
+      - name: NEO_DOMAIN_RESOURCE_ADMINS
+        roles:
+        - domain: neo
+          role: resource_admin
     - name: s4
       groups:
       - name: S4_DOMAIN_RESOURCE_ADMINS
