--- a/openstack/barbican/templates/seed.yaml
+++ b/openstack/barbican/templates/seed.yaml
@@ -20,6 +20,7 @@ spec:
   - monsoon3/domain-hcp03-seed
   - monsoon3/domain-hec-seed
   - monsoon3/domain-monsoon3-seed
+  - monsoon3/domain-neo-seed
   - monsoon3/domain-s4-seed
   - monsoon3/domain-wbs-seed
 
@@ -389,6 +390,48 @@ spec:
       - project: service_desk
         role: keymanager_admin
       #- domain: monsoon3
+      #  role: keymanager_viewer
+      #  inherited: true
+
+  - name: neo
+    groups:
+    - name: NEO_DOMAIN_ADMINS
+      roles:
+      - project: cc-demo
+        role: keymanager_admin
+    - name: NEO_API_SUPPORT
+      roles:
+      - project: api_support
+        role: keymanager_admin
+      - domain: neo
+        role: keymanager_viewer
+        inherited: true
+    - name: NEO_COMPUTE_SUPPORT
+      roles:
+      - project: compute_support
+        role: keymanager_admin
+      #- domain: neo
+      #  role: keymanager_viewer
+      #  inherited: true
+    - name: NEO_NETWORK_SUPPORT
+      roles:
+      - project: network_support
+        role: keymanager_admin
+      #- domain: neo
+      #  role: keymanager_viewer
+      #  inherited: true
+    - name: NEO_STORAGE_SUPPORT
+      roles:
+      - project: storage_support
+        role: keymanager_admin
+      #- domain: neo
+      #  role: keymanager_viewer
+      #  inherited: true
+    - name: NEO_SERVICE_DESK
+      roles:
+      - project: service_desk
+        role: keymanager_admin
+      #- domain: neo
       #  role: keymanager_viewer
       #  inherited: true
 
