--- a/openstack/billing/templates/seeds.yaml
+++ b/openstack/billing/templates/seeds.yaml
@@ -385,6 +385,49 @@ spec:
         role: masterdata_viewer
         inherited: true
 
+  - name: neo
+    groups:
+    - name: NEO_DOMAIN_ADMINS
+      roles:
+      - project: cc-demo
+        role: masterdata_admin
+    - name: NEO_API_SUPPORT
+      roles:
+      - project: api_support
+        role: masterdata_admin
+      - domain: neo
+        role: masterdata_admin
+        inherited: true
+    - name: NEO_COMPUTE_SUPPORT
+      roles:
+      - project: compute_support
+        role: masterdata_admin
+      - domain: neo
+        role: masterdata_viewer
+        inherited: true
+    - name: NEO_NETWORK_SUPPORT
+      roles:
+      - project: network_support
+        role: masterdata_admin
+      - domain: neo
+        role: masterdata_viewer
+        inherited: true
+    - name: NEO_STORAGE_SUPPORT
+      roles:
+      - project: storage_support
+        role: masterdata_admin
+      - domain: neo
+        role: masterdata_viewer
+        inherited: true
+    - name: NEO_SERVICE_DESK
+      roles:
+      - project: service_desk
+        role: masterdata_admin
+      - domain: neo
+        role: masterdata_viewer
+        inherited: true
+
+
   - name: s4
     groups:
     - name: S4_API_SUPPORT
