--- a/openstack/designate/templates/seeds.yaml
+++ b/openstack/designate/templates/seeds.yaml
@@ -21,6 +21,7 @@ spec:
   - monsoon3/domain-hcp03-seed
   - monsoon3/domain-hec-seed
   - monsoon3/domain-monsoon3-seed
+  - monsoon3/domain-neo-seed
   - monsoon3/domain-s4-seed
   - monsoon3/domain-wbs-seed
 {{- if .Values.tempest_enabled }}
@@ -103,7 +104,7 @@ spec:
       dns_tsigkeys:
       - name: '{{ .Values.tsig_key_name }}'
         algorithm: hmac-sha256
-        secret: '{{ .Values.tsig_key }}' 
+        secret: '{{ .Values.tsig_key }}'
         scope: POOL
         resource_id: '{{ .Values.pool_id }}'
     groups:
@@ -277,6 +278,23 @@ spec:
     - name: MONSOON3_DOMAIN_DNS_OPS
       roles:
       - domain: monsoon3
+        role: cloud_dns_ops
+        inherited: true
+    roles:
+    - user: admin@Default
+      role: cloud_dns_admin
+      inherited: true
+
+  - name: neo
+    groups:
+    - name: NEO_DOMAIN_DNS_SUPPORT
+      roles:
+      - domain: neo
+        role: cloud_dns_support
+        inherited: true
+    - name: NEO_DOMAIN_DNS_OPS
+      roles:
+      - domain: neo
         role: cloud_dns_ops
         inherited: true
     roles:
