--- a/openstack/elektra/templates/seed.yaml
+++ b/openstack/elektra/templates/seed.yaml
@@ -18,6 +18,7 @@ spec:
   - monsoon3/domain-hcm-seed
   - monsoon3/domain-hec-seed
   - monsoon3/domain-monsoon3-seed
+  - monsoon3/domain-neo-seed
   - monsoon3/domain-s4-seed
 {{- if .Values.tempest.enabled }}
   - monsoon3/domain-tempest-seed
@@ -407,6 +408,44 @@ spec:
       - domain: monsoon3
         role: cloud_support_tools_viewer
       - domain: monsoon3
+        role: cloud_support_tools_viewer
+        inherited: true
+
+  - name: neo
+    groups:
+    - name: NEO_API_SUPPORT
+      roles:
+      - domain: neo
+        role: cloud_support_tools_viewer
+      - domain: neo
+        role: cloud_support_tools_viewer
+        inherited: true
+    - name: NEO_COMPUTE_SUPPORT
+      roles:
+      - domain: neo
+        role: cloud_support_tools_viewer
+      - domain: neo
+        role: cloud_support_tools_viewer
+        inherited: true
+    - name: NEO_NETWORK_SUPPORT
+      roles:
+      - domain: neo
+        role: cloud_support_tools_viewer
+      - domain: neo
+        role: cloud_support_tools_viewer
+        inherited: true
+    - name: NEO_STORAGE_SUPPORT
+      roles:
+      - domain: neo
+        role: cloud_support_tools_viewer
+      - domain: neo
+        role: cloud_support_tools_viewer
+        inherited: true
+    - name: NEO_SERVICE_DESK
+      roles:
+      - domain: neo
+        role: cloud_support_tools_viewer
+      - domain: neo
         role: cloud_support_tools_viewer
         inherited: true
 
