--- a/openstack/hermes/templates/keystone-seed.yaml
+++ b/openstack/hermes/templates/keystone-seed.yaml
@@ -328,6 +328,44 @@ spec:
           role: audit_viewer
           inherited: true
 
+    - name: neo
+      groups:
+      - name: NEO_API_SUPPORT
+        roles:
+        - project: api_support
+          role: audit_viewer
+        - domain: neo
+          role: audit_viewer
+          inherited: true
+      - name: NEO_COMPUTE_SUPPORT
+        roles:
+        - project: compute_support
+          role: audit_viewer
+        - domain: neo
+          role: audit_viewer
+          inherited: true
+      - name: NEO_NETWORK_SUPPORT
+        roles:
+        - project: network_support
+          role: audit_viewer
+        - domain: neo
+          role: audit_viewer
+          inherited: true
+      - name: NEO_STORAGE_SUPPORT
+        roles:
+        - project: storage_support
+          role: audit_viewer
+        - domain: neo
+          role: audit_viewer
+          inherited: true
+      - name: NEO_SERVICE_DESK
+        roles:
+        - project: service_desk
+          role: audit_viewer
+        - domain: neo
+          role: audit_viewer
+          inherited: true
+
     - name: s4
       groups:
       - name: S4_API_SUPPORT
