--- a/openstack/maia/templates/seed.yaml
+++ b/openstack/maia/templates/seed.yaml
@@ -17,6 +17,7 @@ spec:
   - monsoon3/domain-hcm-seed
   - monsoon3/domain-hcp03-seed
   - monsoon3/domain-hec-seed
+  - monsoon3/domain-neo-seed
   - monsoon3/domain-s4-seed
   - monsoon3/domain-wbs-seed
 
@@ -361,6 +362,44 @@ spec:
       - project: service_desk
         role: monitoring_admin
       - domain: monsoon3
+        role: monitoring_viewer
+        inherited: true
+
+  - name: neo
+    groups:
+    - name: NEO_API_SUPPORT
+      roles:
+      - project: api_support
+        role: monitoring_admin
+      - domain: neo
+        role: monitoring_admin
+        inherited: true
+    - name: NEO_COMPUTE_SUPPORT
+      roles:
+      - project: compute_support
+        role: monitoring_admin
+      - domain: neo
+        role: monitoring_viewer
+        inherited: true
+    - name: NEO_NETWORK_SUPPORT
+      roles:
+      - project: network_support
+        role: monitoring_admin
+      - domain: neo
+        role: monitoring_viewer
+        inherited: true
+    - name: NEO_STORAGE_SUPPORT
+      roles:
+      - project: storage_support
+        role: monitoring_admin
+      - domain: neo
+        role: monitoring_viewer
+        inherited: true
+    - name: NEO_SERVICE_DESK
+      roles:
+      - project: service_desk
+        role: monitoring_admin
+      - domain: neo
         role: monitoring_viewer
         inherited: true
 
