--- a/openstack/manila/templates/seeds.yaml
+++ b/openstack/manila/templates/seeds.yaml
@@ -21,6 +21,7 @@ spec:
   - monsoon3/domain-hcm-seed
   - monsoon3/domain-hcp03-seed
   - monsoon3/domain-hec-seed
+  - monsoon3/domain-neo-seed
   - monsoon3/domain-s4-seed
   - monsoon3/domain-wbs-seed
 
@@ -410,6 +411,48 @@ spec:
       - project: service_desk
         role: sharedfilesystem_admin
       - domain: monsoon3
+        role: sharedfilesystem_viewer
+        inherited: true
+
+  - name: neo
+    groups:
+    - name: NEO_DOMAIN_ADMINS
+      roles:
+      - project: cc-demo
+        role: sharedfilesystem_admin
+    - name: NEO_API_SUPPORT
+      roles:
+      - project: api_support
+        role: sharedfilesystem_admin
+      - domain: neo
+        role: sharedfilesystem_admin
+        inherited: true
+    - name: NEO_COMPUTE_SUPPORT
+      roles:
+      - project: compute_support
+        role: sharedfilesystem_admin
+      - domain: neo
+        role: sharedfilesystem_viewer
+        inherited: true
+    - name: NEO_NETWORK_SUPPORT
+      roles:
+      - project: network_support
+        role: sharedfilesystem_admin
+      - domain: neo
+        role: sharedfilesystem_viewer
+        inherited: true
+    - name: NEO_STORAGE_SUPPORT
+      roles:
+      - project: storage_support
+        role: sharedfilesystem_admin
+      - domain: neo
+        role: sharedfilesystem_admin
+        inherited: true
+    - name: NEO_SERVICE_DESK
+      roles:
+      - project: service_desk
+        role: sharedfilesystem_admin
+      - domain: neo
         role: sharedfilesystem_viewer
         inherited: true
 
