--- a/openstack/neutron/templates/seed.yaml
+++ b/openstack/neutron/templates/seed.yaml
@@ -20,6 +20,7 @@ spec:
   - monsoon3/domain-hcp03-seed
   - monsoon3/domain-hec-seed
   - monsoon3/domain-monsoon3-seed
+  - monsoon3/domain-neo-seed
   - monsoon3/domain-s4-seed
   - monsoon3/domain-wbs-seed
 
@@ -475,6 +476,58 @@ spec:
       - project: service_desk
         role: network_admin
       - domain: monsoon3
+        role: network_viewer
+        inherited: true
+
+  - name: neo
+    groups:
+    - name: NEO_DOMAIN_ADMINS
+      roles:
+      - project: cc-demo
+        role: network_admin
+    - name: NEO_DOMAIN_NETWORK_ADMINS
+      roles:
+      - project: cc-demo
+        role: network_admin
+      - project: monsoon3-net-infra
+        role: network_admin
+      - project: monsoon3-net-infra
+        role: cloud_network_admin
+      - project: monsoon3-shared-infra
+        role: network_admin
+    - name: NEO_API_SUPPORT
+      roles:
+      - project: api_support
+        role: network_admin
+      - domain: neo
+        role: network_admin
+        inherited: true
+    - name: NEO_COMPUTE_SUPPORT
+      roles:
+      - project: compute_support
+        role: network_admin
+      - domain: neo
+        role: network_viewer
+        inherited: true
+    - name: NEO_NETWORK_SUPPORT
+      roles:
+      - project: network_support
+        role: network_admin
+      - domain: neo
+        role: network_admin
+        inherited: true
+    - name: NEO_STORAGE_SUPPORT
+      roles:
+      - project: storage_support
+        role: network_admin
+      - domain: neo
+        role: network_viewer
+        inherited: true
+    - name: NEO_SERVICE_DESK
+      roles:
+      - project: service_desk
+        role: network_admin
+      - domain: neo
         role: network_viewer
         inherited: true
 
