--- a/openstack/nova/templates/seed.yaml
+++ b/openstack/nova/templates/seed.yaml
@@ -14,6 +14,7 @@ spec:
   - monsoon3/domain-hcp03-seed
   - monsoon3/domain-hec-seed
   - monsoon3/domain-monsoon3-seed
+  - monsoon3/domain-neo-seed
   - monsoon3/domain-s4-seed
   - monsoon3/domain-wbs-seed
 
@@ -436,6 +437,48 @@ spec:
       - project: service_desk
         role: compute_admin
       - domain: monsoon3
+        role: compute_viewer
+        inherited: true
+
+  - name: neo
+    groups:
+    - name: NEO_DOMAIN_ADMINS
+      roles:
+      - project: cc-demo
+        role: compute_admin
+    - name: NEO_API_SUPPORT
+      roles:
+      - project: api_support
+        role: compute_admin
+      - domain: neo
+        role: compute_admin
+        inherited: true
+    - name: NEO_COMPUTE_SUPPORT
+      roles:
+      - project: compute_support
+        role: compute_admin
+      - domain: neo
+        role: compute_admin
+        inherited: true
+    - name: NEO_NETWORK_SUPPORT
+      roles:
+      - project: network_support
+        role: compute_admin
+      - domain: neo
+        role: compute_viewer
+        inherited: true
+    - name: NEO_STORAGE_SUPPORT
+      roles:
+      - project: storage_support
+        role: compute_admin
+      - domain: neo
+        role: compute_viewer
+        inherited: true
+    - name: NEO_SERVICE_DESK
+      roles:
+      - project: service_desk
+        role: compute_admin
+      - domain: neo
         role: compute_viewer
         inherited: true
 
