--- a/openstack/sap-seeds/templates/nova-seed.yaml
+++ b/openstack/sap-seeds/templates/nova-seed.yaml
@@ -11,6 +11,7 @@ spec:
   - monsoon3/domain-hcm-seed
   - monsoon3/domain-hcp03-seed
   - monsoon3/domain-hec-seed
+  - monsoon3/domain-neo-seed
   - monsoon3/domain-s4-seed
   - monsoon3/domain-wbs-seed
   domains:
@@ -239,6 +240,44 @@ spec:
       - project: service_desk
         role: compute_admin
       - domain: hec
+        role: compute_viewer
+        inherited: true
+
+  - name: neo
+    groups:
+    - name: NEO_API_SUPPORT
+      roles:
+      - project: api_support
+        role: compute_admin
+      - domain: neo
+        role: compute_admin
+        inherited: true
+    - name: NEO_COMPUTE_SUPPORT
+      roles:
+      - project: compute_support
+        role: compute_admin
+      - domain: neo
+        role: compute_admin
+        inherited: true
+    - name: NEO_NETWORK_SUPPORT
+      roles:
+      - project: network_support
+        role: compute_admin
+      - domain: neo
+        role: compute_viewer
+        inherited: true
+    - name: NEO_STORAGE_SUPPORT
+      roles:
+      - project: storage_support
+        role: compute_admin
+      - domain: neo
+        role: compute_viewer
+        inherited: true
+    - name: NEO_SERVICE_DESK
+      roles:
+      - project: service_desk
+        role: compute_admin
+      - domain: neo
         role: compute_viewer
         inherited: true
 
