--- a/openstack/swift-utils/templates/seed.yaml
+++ b/openstack/swift-utils/templates/seed.yaml
@@ -22,6 +22,7 @@ spec:
     - monsoon3/domain-hcm-seed
     - monsoon3/domain-hec-seed
     - monsoon3/domain-monsoon3-seed
+    - monsoon3/domain-neo-seed
     - monsoon3/domain-s4-seed
     - monsoon3/domain-wbs-seed
     - monsoon3/domain-cc3test-seed
@@ -53,6 +54,8 @@ spec:
           - domain: hec
             role: admin
           - domain: monsoon3
+            role: admin
+          - domain: neo
             role: admin
           - domain: s4
             role: admin
