[Neo-Seeds] fixing typo

--- a/openstack/domain-seeds/templates/domain-neo-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-neo-seed.yaml
@@ -19,9 +19,9 @@ spec:
     - name: admin
       description: 'NEO Administrators Project'
     - name: neo-net-infra
-      description: 'Home of address-scopes, subnetpools, external networks, subnets for the bs domain'
+      description: 'Home of address-scopes, subnetpools, external networks, subnets for the neo domain'
     - name: neo-shared-infra
-      description: 'Home of private networks, backup networks and routers for the bs domain'
+      description: 'Home of private networks, backup networks and routers for the neo domain'
     - name: support
       description: 'Support teams'
     - name: api_support
@@ -148,13 +148,13 @@ spec:
         user_enabled_mask: 2
         user_enabled_default: "512"
         user_attribute_ignore: default_project_id
-        user_filter: (memberOf=CN=NEO_DOMAIN_USERS,OU=BS,OU=OSDomains,OU=CCloud,{{ .Values.ldapSuffix }})
+        user_filter: (memberOf=CN=NEO_DOMAIN_USERS,OU=NEO,OU=OSDomains,OU=CCloud,{{ .Values.ldapSuffix }})
         group_objectclass: group
         group_id_attribute: cn
         group_name_attribute: name
         group_desc_attribute: description
         group_member_attribute: member
-        group_tree_dn: OU=BS,OU=OSDomains,OU=CCloud,{{ .Values.ldapSuffix }}
+        group_tree_dn: OU=NEO,OU=OSDomains,OU=CCloud,{{ .Values.ldapSuffix }}
         use_pool: {{ .Values.ldapUsePool }}
         pool_size: 100
         use_auth_pool: {{ .Values.ldapUseAuthPool }}
