[Neo-Seeds] fixing domain: monsoon3 typo monsoon3 group name

--- a/openstack/cinder/templates/seed.yaml
+++ b/openstack/cinder/templates/seed.yaml
@@ -382,35 +382,35 @@ spec:
       roles:
       - project: api_support
         role: volume_admin
-      - domain: neo
+      - domain: monsoon3
         role: volume_admin
         inherited: true
     - name: MONSOON3_COMPUTE_SUPPORT
       roles:
       - project: compute_support
         role: volume_admin
-      - domain: neo
+      - domain: monsoon3
         role: volume_viewer
         inherited: true
     - name: MONSOON3_NETWORK_SUPPORT
       roles:
       - project: network_support
         role: volume_admin
-      - domain: neo
+      - domain: monsoon3
         role: volume_viewer
         inherited: true
     - name: MONSOON3_STORAGE_SUPPORT
       roles:
       - project: storage_support
         role: volume_admin
-      - domain: neo
+      - domain: monsoon3
         role: volume_admin
         inherited: true
     - name: MONSOON3_SERVICE_DESK
       roles:
       - project: service_desk
         role: volume_admin
-      - domain: neo
+      - domain: monsoon3
         role: volume_viewer
         inherited: true
 
