[Neo-domain-seeds] Editing Neo Domain description

--- a/openstack/domain-seeds/templates/domain-neo-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-neo-seed.yaml
@@ -13,7 +13,7 @@ spec:
 
   domains:
   - name: neo
-    description: Business Systems
+    description: Networking in SaaS network
 
     projects:
     - name: admin
