[Neo-Seeds] fixing project name in neutron seed

--- a/openstack/neutron/templates/seed.yaml
+++ b/openstack/neutron/templates/seed.yaml
@@ -489,11 +489,11 @@ spec:
       roles:
       - project: cc-demo
         role: network_admin
-      - project: monsoon3-net-infra
+      - project: neo-net-infra
         role: network_admin
-      - project: monsoon3-net-infra
+      - project: neo-net-infra
         role: cloud_network_admin
-      - project: monsoon3-shared-infra
+      - project: neo-shared-infra
         role: network_admin
     - name: NEO_API_SUPPORT
       roles:
