[neutron] added count of sg groups

--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -271,6 +271,12 @@ pgmetrics:
         - count:
             usage: "GAUGE"
             description: "Estimate on number of filter rules"
+    openstack_neutron_sg_count:
+     query: "select count(*) as count from securitygrouprules"
+     metrics:
+        - count:
+            usage: "GAUGE"
+            description: "Count of total security group rules"
     openstack_neutron_monitor_agents:
       query: "SELECT host, agent_type, load, EXTRACT(EPOCH FROM (now() - heartbeat_timestamp)) as heartbeat_seconds FROM agents WHERE admin_state_up and EXTRACT(EPOCH FROM (now() - heartbeat_timestamp)) < 90"
       metrics:
