[barbican] allow to deploy mariadb in parallel; remove pg_cluster

--- a/openstack/barbican/requirements.yaml
+++ b/openstack/barbican/requirements.yaml
@@ -5,6 +5,14 @@ dependencies:
   - name: postgresql
     repository: file://../../common/postgresql
     version: 0.3.0
+  - name: mariadb
+    repository: file://../../common/mariadb
+    version: 0.1.1
+    condition: mariadb.enabled
+  - name: mysql_metrics
+    repository: file://../../common/mysql_metrics
+    version: 0.1.0
+    condition: mariadb.enabled
   - name: pgmetrics
     repository: file://../../common/pgmetrics
     version: 0.1.0
