--- a/openstack/barbican/values.yaml
+++ b/openstack/barbican/values.yaml
@@ -35,10 +35,77 @@ statsd:
 
 pg_cluster:
   enabled: false
-  aws_access_key_id: "ccbaa643ef0f4184a1f045b15bcf5c95"
-  aws_secret_access_key: "f2abac607dbd45108075bbc9dbce18e3"
-  wal_s3_bucket: "db-backup-pgcluster"
-  backup_schedule: "* * * * *"
+
+mariadb:
+  enabled: false
+  name: barbican
+  initdb_configmap: barbican-initdb
+
+mysql_metrics:
+  db_name: barbican
+  db_user: root
+  db_password: DEFINED-IN-REGION-CHART
+  customMetrics:
+    openstack_barbican_containers:
+      query: "SELECT containers.name AS container_name, containers.type, containers.id, containers.status, projects.external_id AS project_id, COUNT(*) AS count_gauge from containers INNER JOIN projects on containers.project_id=projects.id where containers.deleted='false' GROUP BY containers.name, containers.type, containers.id, containers.status, projects.external_id"
+      metrics:
+        - id:
+            usage: "LABEL"
+            description: "Container ID"
+        - status:
+            usage: "LABEL"
+            description: "Container state"
+        - container_name:
+            usage: "LABEL"
+            description: "Container name"
+        - project_id:
+            usage: "LABEL"
+            description: "Project ID of the container"
+        - type:
+            usage: "LABEL"
+            description: "Type of container"
+        - count_gauge:
+            usage: "GAUGE"
+            description: "Number of containers"
+    openstack_barbican_secrets:
+      query: "SELECT secrets.id, secrets.status, secrets.name AS secret_name, secrets.expiration, projects.external_id AS project_id, secrets.secret_type, COUNT(*) AS count_gauge from secrets INNER JOIN projects on secrets.project_id=projects.id where secrets.deleted='false' GROUP BY secrets.id, secrets.status, secrets.name, projects.external_id, secrets.secret_type"
+      metrics:
+        - id:
+            usage: "LABEL"
+            description: "Secret ID"
+        - status:
+            usage: "LABEL"
+            description: "Secret state"
+        - secret_name:
+            usage: "LABEL"
+            description: "Secret name"
+        - expiration:
+            usage: "LABEL"
+            description: "Secret Expiration time"
+        - project_id:
+            usage: "LABEL"
+            description: "Project ID of the secret"
+        - secret_type:
+            usage: "LABEL"
+            description: "Type of secret"
+        - count_gauge:
+            usage: "GAUGE"
+            description: "Number of secrets"
+    openstack_barbican_certificate:
+      query: "SELECT secrets.status, secrets.expiration AS expiration_date, secrets.name AS certificate_name, projects.external_id AS project_id from secrets INNER JOIN projects on secrets.project_id=projects.id where secrets.deleted='false' AND secret_type='certificate' GROUP BY secrets.status, secrets.name, projects.external_id, secrets.expiration"
+      metrics:
+        - status:
+            usage: "LABEL"
+            description: "Secret state"
+        - certificate_name:
+            usage: "LABEL"
+            description: "Secret name"
+        - expiration_date:
+            usage: "GAUGE"
+            description: "Secret Expiration time"
+        - project_id:
+            usage: "LABEL"
+            description: "Project ID of the secret"
 
 postgresql:
   custom_repository: true
