[hermes] fix selectors es-manager

--- a/openstack/hermes/templates/es-manager-deployment.yaml
+++ b/openstack/hermes/templates/es-manager-deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     system: openstack
     service: audit
-    component: elasticsearch
+    component: es-manager
     role: manager
   #annotations:
   #  kubernetes.io/change-cause: {{.Values.cluster_deployment_reason}}
@@ -21,7 +21,7 @@ spec:
   template:
     metadata:
       labels:
-        component: elasticsearch
+        component: es-manager
         role: manager
       annotations:
         checksum/application.conf.tpl: {{ include "hermes/templates/etc/_application.conf.tpl" . | sha256sum }}
