--- a/openstack/hermes/templates/es-manager-service.yaml
+++ b/openstack/hermes/templates/es-manager-service.yaml
@@ -6,12 +6,12 @@ metadata:
   labels:
     system: openstack
     service: audit
-    component: elasticsearch
-    role:  manager
+    component: es-manager
+    role: manager
 spec:
   selector:
-    component: elasticsearch
-    role:  manager
+    component: es-manager
+    role: manager
   ports:
     - name: manager
       port: {{.Values.hermes.elasticsearch.manager_port_internal}}
