use a proper name for the neo domain

--- a/openstack/domain-seeds/templates/domain-neo-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-neo-seed.yaml
@@ -13,7 +13,7 @@ spec:
 
   domains:
   - name: neo
-    description: Networking in SaaS network
+    description: NEO Platform
 
     projects:
     - name: admin
