--- a/openstack/cinder/templates/vcenter_datacenter_cinder_configmap.yaml
+++ b/openstack/cinder/templates/vcenter_datacenter_cinder_configmap.yaml
@@ -4,11 +4,14 @@ kind: VCenterTemplate
 metadata:
   name: 'vcenter-datacenter-cinder-configmap'
   scope: 'datacenter'
-template: |{{`
+  jinja2_options:
+    variable_start_string: '{='
+    variable_end_string: '=}'
+template: |
   apiVersion: v1
   kind: ConfigMap
   metadata:
-    name: volume-vmware-{{ name }}
+    name: volume-vmware-{= name =}
     labels:
       system: openstack
       type: configuration
@@ -19,13 +22,13 @@ template: |{{`
       enabled_backends = vmware
 
       [backend_defaults]
-      vmware_host_ip = {{ host }}
-      vmware_host_username = {{ username | quote }}
-      vmware_host_password = {{ password | quote }}
-      backend_availability_zone = {{ availability_zone | quote }}`}}
+      vmware_host_ip = {= host =}
+      vmware_host_username = {= username | quote =}
+      vmware_host_password = {= password | quote =}
+      backend_availability_zone = {= availability_zone | quote =}
       {{- range $key, $value := .Values.backend_defaults}}
       {{ $key }} = {{ $value }}
-      {{- end }}{{`
+      {{- end }}
 
       [vmware]
       volume_driver = cinder.volume.drivers.vmware.vmdk.VMwareVcVmdkDriver
@@ -34,5 +37,4 @@ template: |{{`
       [vstorageobject]
       volume_driver = cinder.volume.drivers.vmware.fcd.VMwareVStorageObjectDriver
       volume_backend_name = vstorageobject
-`}}
 {{- end }}
