--- a/openstack/cinder/templates/vcenter_datacenter_cinder_deployment.yaml
+++ b/openstack/cinder/templates/vcenter_datacenter_cinder_deployment.yaml
@@ -4,11 +4,14 @@ kind: VCenterTemplate
 metadata:
   name: 'vcenter-datacenter-cinder-deployment'
   scope: 'datacenter'
-template: |{{`
+  jinja2_options:
+    variable_start_string: '{='
+    variable_end_string: '=}'
+template: |
   kind: Deployment
   apiVersion: extensions/v1beta1
   metadata:
-    name: cinder-volume-vmware-{{ name }}
+    name: cinder-volume-vmware-{= name =}
     labels:
       system: openstack
       type: backend
@@ -23,19 +26,19 @@ template: |{{`
         maxSurge: 1
     selector:
       matchLabels:
-          name: cinder-volume-vmware-{{ name }}
+          name: cinder-volume-vmware-{= name =}
     template:
       metadata:
         labels:
           application: cinder
           component: volume-vmware
-          name: cinder-volume-vmware-{{ name }}
+          name: cinder-volume-vmware-{= name =}
       spec:
-        hostname: cinder-volume-vmware-{{ name }}
-`}}{{ tuple "{{ availability_zone }}" | include "kubernetes_pod_az_affinity" | indent 8 }}{{`
+        hostname: cinder-volume-vmware-{= name =}
+{{ tuple "{= availability_zone =}" | include "kubernetes_pod_az_affinity" | indent 8 }}
         containers:
-        - name: cinder-volume-vmware-{{ name }}
-          image: `}}{{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/ubuntu-source-cinder-scheduler:{{.Values.imageVersionCinderScheduler | default .Values.imageVersion | required "Please set cinder.imageVersion or similar" }}{{`
+        - name: cinder-volume-vmware-{= name =}
+          image: {{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{.Values.global.image_namespace}}/ubuntu-source-cinder-scheduler:{{.Values.imageVersionCinderScheduler | default .Values.imageVersion | required "Please set cinder.imageVersion or similar" }}
           imagePullPolicy: IfNotPresent
           command:
           - dumb-init
@@ -44,25 +47,25 @@ template: |{{`
           - name: COMMAND
             value: 'cinder-volume'
           - name: NAMESPACE
-            value: {{ namespace }}
-          `}}{{- if .Values.sentry.enabled }}
+            value: {= namespace =}
+          {{- if .Values.sentry.enabled }}
           - name: SENTRY_DSN
             valueFrom:
               secretKeyRef:
                 name: sentry
                 key: {{ .Chart.Name }}.DSN.python
-          {{- end }}{{`
+          {{- end }}
           - name: PYTHONWARNINGS
             value: 'ignore:Unverified HTTPS request'
           - name: PGAPPNAME
-            value: cinder-volume-vmware-{{ name }}
+            value: cinder-volume-vmware-{= name =}
           livenessProbe:
             exec:
               command:
               - bash
               - -e
               - -c
-              - source <(grep -Pzo '\[keystone_authtoken\][^[]*' /etc/cinder/cinder.conf | tr -d '\000' | while read var equal val; do test "$equal" = "=" && echo export OS_${var^^}=${val} ; done); export OS_IDENTITY_API_VERSION=3; for backend in $(grep "^enabled_backends = " /etc/cinder/cinder-volume.conf | while read _ _ val; do tr -d ',' <<<"$val"; done); do test "$(openstack volume service list -f value --host "cinder-volume-vmware-{{ name }}@$backend" -c State)" = "up"; done
+              - source <(grep -Pzo '\[keystone_authtoken\][^[]*' /etc/cinder/cinder.conf | tr -d '\000' | while read var equal val; do test "$equal" = "=" && echo export OS_${var^^}=${val} ; done); export OS_IDENTITY_API_VERSION=3; for backend in $(grep "^enabled_backends = " /etc/cinder/cinder-volume.conf | while read _ _ val; do tr -d ',' <<<"$val"; done); do test "$(openstack volume service list -f value --host "cinder-volume-vmware-{= name =}@$backend" -c State)" = "up"; done
             initialDelaySeconds: 60
             periodSeconds: 10
             failureThreshold: 3
@@ -105,6 +108,5 @@ template: |{{`
             name: cinder-etc
         - name: volume-config
           configMap:
-            name:  volume-vmware-{{ name }}
-`}}
+            name:  volume-vmware-{= name =}
 {{- end }}
