--- a/openstack/hermes/templates/elasticsearch-exporter-deployment.yaml
+++ b/openstack/hermes/templates/elasticsearch-exporter-deployment.yaml
@@ -6,14 +6,14 @@ metadata:
   namespace: hermes
   labels:
     system: openstack
-    service: logging
+    service: audit
 
 spec:
   replicas: 1
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxUnavailable: 0
+      maxUnavailable: 1
       maxSurge: 1
   template:
     metadata:
