[hermes]Changed service label

--- a/openstack/hermes/templates/elasticsearch-exporter-service.yaml
+++ b/openstack/hermes/templates/elasticsearch-exporter-service.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: hermes
   labels:
     system: openstack
-    service: logging
+    service: audit
     component: elasticsearch-exporter-{{ .Values.elasticsearch_exporter.name }}
   annotations:
     prometheus.io/scrape: "true"
