[hermes] change exporter name fix concourse issue

--- a/openstack/hermes/templates/elasticsearch-exporter-deployment.yaml
+++ b/openstack/hermes/templates/elasticsearch-exporter-deployment.yaml
@@ -2,7 +2,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: elasticsearch-exporter-{{ .Values.elasticsearch_exporter.name }}
+  name: es-exporter-{{ .Values.elasticsearch_exporter.name }}
   namespace: hermes
   labels:
     system: openstack
@@ -18,7 +18,7 @@ spec:
   template:
     metadata:
       labels:
-        component: elasticsearch-exporter-{{ .Values.elasticsearch_exporter.name }}
+        component: es-exporter-{{ .Values.elasticsearch_exporter.name }}
     spec:
       nodeSelector:
         zone: farm
