--- a/openstack/hermes/templates/elasticsearch-exporter-service.yaml
+++ b/openstack/hermes/templates/elasticsearch-exporter-service.yaml
@@ -2,19 +2,19 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: elasticsearch-exporter-{{ .Values.elasticsearch_exporter.name }}
+  name: es-exporter-{{ .Values.elasticsearch_exporter.name }}
   namespace: hermes
   labels:
     system: openstack
     service: audit
-    component: elasticsearch-exporter-{{ .Values.elasticsearch_exporter.name }}
+    component: es-exporter-{{ .Values.elasticsearch_exporter.name }}
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "{{ .Values.elasticsearch_exporter.listen_port }}"
 
 spec:
   selector:
-    component: elasticsearch-exporter-{{ .Values.elasticsearch_exporter.name }}
+    component: es-exporter-{{ .Values.elasticsearch_exporter.name }}
   ports:
     - name: metrics
       port: {{$.Values.elasticsearch_exporter.listen_port}}
