initial ping-exporter in infra-monitoring

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -81,3 +81,9 @@ dependencies:
     repository: file://vendor/blackbox-exporter
     version: 0.1.0
     condition: blackbox_exporter.enabled
+
+  - name: ping-exporter
+    alias: ping_exporter
+    repository: file://vendor/ping-exporter
+    version: 0.1.0
+    condition: ping_exporter.enabled
