[Elektra][Seeds] Adding neo domain

--- a/openstack/elektra/templates/seed.yaml
+++ b/openstack/elektra/templates/seed.yaml
@@ -95,6 +95,8 @@ spec:
         role: admin
       - domain: monsoon3
         role: admin
+      - domain: neo
+        role: admin
       - domain: s4
         role: admin
 {{- if .Values.tempest.enabled }}
