--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -56,12 +56,13 @@ data:
 
       # ======= CUSTOM ALERT NOTIFICATION ON DUTY RELEVANT ALERTS ======= 
 
-      # owner: Thomas Grainchen
+      # owner: Thomas Grainchen / Abhishek Kumar
       - receiver: slack_nannies
         continue: true
         match_re:
           context: nanny
           severity: critical|warning|info
+          region: ap-ae-1|ap-au-1|ap-cn-1|ap-jp-1|ap-jp-2|ap-sa-1|eu-de-1|eu-de-2|eu-nl-1|eu-ru-1|la-br-1|na-ca-1|na-us-1|na-us-2|na-us-3
 
       # owner: Michael Schmidt / Fabian Ruff
       - receiver: slack_k8s
