[nova] Conditionally spawn api-metadata pods
If the metadata APIs are enabled via setting `enabled_apis` including
"metadata", we don't have to spawn separate nova-api-metadata pods. This
is currently true in `eu-de-1` only, where we scaled down the deployment
of nova-api-metadata. To support the `eu-de-1` use-case, we were still
spawning metadata API workers in all other regions' nova-api pods. These
workers idled, but wasted memory.  This commit disables the idling
metadata workers in nova-api pods by default.

--- a/openstack/nova/templates/api-metadata-deployment.yaml
+++ b/openstack/nova/templates/api-metadata-deployment.yaml
@@ -1,3 +1,4 @@
+{{- if not (contains "metadata" .Values.api.DEFAULT.enabled_apis) }}
 kind: Deployment
 apiVersion: extensions/v1beta1
 
@@ -158,3 +159,4 @@ spec:
           configMap:
             name: nova-bin
             defaultMode: 0755
+{{- end }}
