--- a/openstack/nova/templates/api-metadata-service.yaml
+++ b/openstack/nova/templates/api-metadata-service.yaml
@@ -1,3 +1,4 @@
+{{- if not (contains "metadata" .Values.api.DEFAULT.enabled_apis) }}
 kind: Service
 apiVersion: v1
 
@@ -19,3 +20,4 @@ spec:
   ports:
     - name: nova-api-metadata
       port: {{.Values.global.novaApiMetadataPortInternal}}
+{{- end }}
