--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -154,7 +154,8 @@ cross_az_attach: 'False'
 api:
   DEFAULT:
     api_paste_config: /etc/nova/api-paste.ini
-    enabled_apis: osapi_compute,metadata
+    # adding metadata here will disable spawning of separate api-metadata pods
+    enabled_apis: osapi_compute
     use_forwarded_for: true
 
   api:
