[system][unbound] default value for alerts: prometheus

--- a/system/unbound/values.yaml
+++ b/system/unbound/values.yaml
@@ -7,3 +7,7 @@ unbound:
   port_unbound_exporter: 9107
   interface: 0.0.0.0
   failure_domain_zone: a
+
+alerts:
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: openstack
