snmp-exporter: adding support for context based switches

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -88,6 +88,10 @@ apic_exporters:
 
 snmp_exporter:
   enabled: false
+  asr04:
+    enabled: false
+  n7k:
+    enabled: false
 
 bios_exporter:
   enabled: false
