[neutron] enable parallel up/down of network agent statefulset

--- a/openstack/neutron/templates/statefulset-network-agent.yaml
+++ b/openstack/neutron/templates/statefulset-network-agent.yaml
@@ -20,6 +20,7 @@ spec:
     matchLabels:
       name: neutron-network-agent-{{ $az }}
   serviceName: neutron-network-agent
+  podManagementPolicy: "Parallel"
   template:
     metadata:
       annotations:
