--- a/openstack/grafana/templates/grafana-ingress.yaml
+++ b/openstack/grafana/templates/grafana-ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   name: grafana
   annotations:
     vice-president: {{ default false .Values.grafana.vice_president | quote }}
+    disco: "true"
   {{- if .Values.grafana.auth.tls_client_auth.enabled}}
     ingress.kubernetes.io/auth-tls-secret: {{ default "" .Values.grafana.auth.tls_client_auth.secret }}
     ingress.kubernetes.io/auth-tls-verify-depth: "3"
