[barbican] set default pvc name for mariadb

--- a/openstack/barbican/values.yaml
+++ b/openstack/barbican/values.yaml
@@ -40,6 +40,7 @@ mariadb:
   enabled: false
   name: barbican
   initdb_configmap: barbican-initdb
+  persistence_claim: barbican-db-pvclaim
 
 mysql_metrics:
   db_name: barbican
