[mariadb] customize the etc-configmap name

--- a/common/mariadb/templates/deployment.yaml
+++ b/common/mariadb/templates/deployment.yaml
@@ -114,7 +114,7 @@ spec:
       volumes:
         - name: mariadb-etc
           configMap:
-            name: mariadb-etc
+            name: mariadb-{{.Values.name}}-etc
 {{- if .Values.persistence_claim }}
         - name: mariadb-persistent-storage
           persistentVolumeClaim:
