--- a/common/mariadb/templates/etc-configmap.yaml
+++ b/common/mariadb/templates/etc-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: mariadb-etc
+  name: mariadb-{{.Values.name}}-etc
   labels:
     app: mariadb
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
