[mariadb] fix pvc templating errors

--- a/common/mariadb/templates/pvc.yaml
+++ b/common/mariadb/templates/pvc.yaml
@@ -5,10 +5,11 @@ metadata:
   name: {{.Values.persistence_claim }}
 spec:
   accessModes:
-    - ReadWriteOnce
-    - ReadWriteMany
-    - ReadOnlyMany
+  - ReadWriteOnce
+  - ReadWriteMany
+  - ReadOnlyMany
   resources:
     requests:
-      storage: {{.Values.persistence_claim_size | default 10Gi | quote }}
-{{- end }}
+      storage: {{.Values.persistence_claim_size | default "10Gi" }}
+
+{{ end }}
