--- a/common/mariadb/templates/pvc.yaml
+++ b/common/mariadb/templates/pvc.yaml
@@ -10,6 +10,6 @@ spec:
   - ReadOnlyMany
   resources:
     requests:
-      storage: {{.Values.persistence_claim_size | default "10Gi" }}
+      storage: {{ .Values.persistence_claim_size }}
 
 {{ end }}
