--- a/common/mariadb/values.yaml
+++ b/common/mariadb/values.yaml
@@ -10,7 +10,7 @@ port_public: 3306
 #root_password:
 #initdb_configmap:
 #persistence_claim:
-#persistence_claim_size:
+persistence_claim_size: "10Gi"
 
 livenessProbe:
   enabled: true
