--- a/openstack/designate/requirements.yaml
+++ b/openstack/designate/requirements.yaml
@@ -2,7 +2,7 @@ dependencies:
   - name: mariadb
     repository: file://../../common/mariadb
     version: 0.1.1
-  - name: mysql_metrics
+  - name: mysql-metrics
     repository: file://../../common/mysql_metrics
     version: 0.1.0
   - name: rabbitmq
