--- a/openstack/barbican/requirements.yaml
+++ b/openstack/barbican/requirements.yaml
@@ -9,7 +9,7 @@ dependencies:
     repository: file://../../common/mariadb
     version: 0.1.1
     condition: mariadb.enabled
-  - name: mysql-metrics
+  - name: mysql_metrics
     repository: file://../../common/mysql_metrics
     version: 0.1.0
     condition: mariadb.enabled
