increase maia scrape interval

--- a/openstack/maia/values.yaml
+++ b/openstack/maia/values.yaml
@@ -48,6 +48,7 @@ prometheus_server:
   name: maia-oprom
 
   retentionTime: 30d
+  scrapeInterval: "60s"
 
   additionalScrapeConfigs:
     name: maia-sconf
