[mariadb] introduce flag for pvc dynamic provisioning

--- a/common/mariadb/templates/pvc.yaml
+++ b/common/mariadb/templates/pvc.yaml
@@ -1,4 +1,5 @@
-{{- if .Values.persistence_claim }}
+
+{{- if and .Values.persistence_claim .Values.persistence_claim_autoprovision }}
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
@@ -11,5 +12,5 @@ spec:
   resources:
     requests:
       storage: {{ .Values.persistence_claim_size }}
-
+  storageClassName: default
 {{ end }}
