--- a/common/mariadb/values.yaml
+++ b/common/mariadb/values.yaml
@@ -11,6 +11,7 @@ port_public: 3306
 #initdb_configmap:
 #persistence_claim:
 persistence_claim_size: "10Gi"
+persistence_claim_autoprovision: false
 
 livenessProbe:
   enabled: true
