adding new elasticsearch prometheus exporter for own queries

--- a/system/elk/requirements.yaml
+++ b/system/elk/requirements.yaml
@@ -49,3 +49,9 @@ dependencies:
     repository: file://vendor/es-exporter
     version: 2.0.0
     condition: es-exporter.enabled
+
+  - name: es-query
+    alias: es_query
+    repository: file://vendor/es-query
+    version: 0.0.1
+    condition: es-query.enabled
