--- a/system/sentry/values.yaml
+++ b/system/sentry/values.yaml
@@ -78,3 +78,19 @@ alerts:
   enabled: true
   # Name of the Prometheus to which the alerts should be assigned to.
   prometheus: openstack
+
+pgmetrics:
+  db_name: sentry
+
+  customMetrics:
+    sentry_unresolved_issues:
+      query: >
+        SELECT o.slug AS organization, p.slug AS project, COUNT(*) FROM sentry_groupedmessage gm
+          JOIN sentry_project p ON gm.project_id = p.id
+          JOIN sentry_organization o ON p.organization_id = o.id
+         WHERE gm.
+         GROUP BY o.slug, p.slug
+      metrics:
+        - organization: { usage: LABEL, description: "Sentry organization" }
+        - project:      { usage: LABEL, description: "Sentry project" }
+        - gauge:        { usage: GAUGE, description: "Number of unresolved issues in project" }
