--- a/system/sentry/values.yaml
+++ b/system/sentry/values.yaml
@@ -88,7 +88,7 @@ pgmetrics:
         SELECT o.slug AS organization, p.slug AS project, COUNT(*) FROM sentry_groupedmessage gm
           JOIN sentry_project p ON gm.project_id = p.id
           JOIN sentry_organization o ON p.organization_id = o.id
-         WHERE gm.
+         WHERE gm.status = 0
          GROUP BY o.slug, p.slug
       metrics:
         - organization: { usage: LABEL, description: "Sentry organization" }
