--- a/system/sentry/values.yaml
+++ b/system/sentry/values.yaml
@@ -94,3 +94,16 @@ pgmetrics:
         - organization: { usage: LABEL, description: "Sentry organization" }
         - project:      { usage: LABEL, description: "Sentry project" }
         - gauge:        { usage: GAUGE, description: "Number of unresolved issues in project" }
+
+    sentry_unresolved_issues_nova:
+      query: >
+        SELECT o.slug AS organization, p.slug AS project, message FROM sentry_groupedmessage gm
+          JOIN sentry_project p ON gm.project_id = p.id
+          JOIN sentry_organization o ON p.organization_id = o.id
+         WHERE gm.status = 0 AND gm.project_id = 22
+         GROUP BY o.slug, p.slug, message
+      metrics:
+        - organization: { usage: LABEL, description: "Sentry organization" }
+        - project:      { usage: LABEL, description: "Sentry project" }
+        - message:      { usage: LABEL, description: "Issue message"}
+        - gauge:        { usage: GAUGE, description: "Number of unresolved issues in project" }
