[neutron] added /dev/log to statefulset-network-agent

--- a/openstack/neutron/templates/statefulset-network-agent.yaml
+++ b/openstack/neutron/templates/statefulset-network-agent.yaml
@@ -111,6 +111,9 @@ spec:
               mountPath: /etc/sudoers
               subPath: sudoers
               readOnly: true
+            - name: logvol
+              mountPath: /dev/log
+              readOnly: false
 {{- if $.Values.agent.neutron_l3 | default false }}
         - name: neutron-l3-agent
           image: {{ default "hub.global.cloud.sap" $.Values.global.imageRegistry }}/monsoon/loci-neutron:{{$.Values.imageVersionNetworkAgentL3 | default $.Values.imageVersionNetworkAgent | default $.Values.imageVersion | required "Please set neutron.imageVersionNetworkAgentL3 or similar"}}
@@ -240,5 +243,8 @@ spec:
         - name: neutron-etc
           configMap:
             name: neutron-etc
+        - name: logvol
+          hostPath:
+            path: /dev/log
 {{- end }}
 {{- end }}
