add <domain>_support_tools_viewer role assignment

--- a/openstack/elektra/templates/seed.yaml
+++ b/openstack/elektra/templates/seed.yaml
@@ -184,6 +184,11 @@ spec:
       - domain: bs
         role: cloud_support_tools_viewer
         inherited: true
+    - name: BS_SUPPORT_TOOL_VIEWERS
+      roles:
+      - domain: bs
+        role: domain_support_tools_viewer
+      
 
   - name: cp
     groups:
@@ -222,6 +227,10 @@ spec:
       - domain: cp
         role: cloud_support_tools_viewer
         inherited: true
+    - name: CP_SUPPORT_TOOL_VIEWERS
+      roles:
+      - domain: cp
+        role: domain_support_tools_viewer
 
   - name: fsn
     groups:
@@ -260,6 +269,10 @@ spec:
       - domain: fsn
         role: cloud_support_tools_viewer
         inherited: true
+    - name: FSN_SUPPORT_TOOL_VIEWERS
+      roles:
+      - domain: fsn
+        role: domain_support_tools_viewer
 
   - name: hcm
     groups:
@@ -298,6 +311,10 @@ spec:
       - domain: hcm
         role: cloud_support_tools_viewer
         inherited: true
+    - name: HCM_SUPPORT_TOOL_VIEWERS
+      roles:
+      - domain: hcm
+        role: domain_support_tools_viewer
 
   - name: hcp03
     groups:
@@ -336,6 +353,10 @@ spec:
       - domain: hcp03
         role: cloud_support_tools_viewer
         inherited: true
+    - name: HCP03_SUPPORT_TOOL_VIEWERS
+      roles:
+      - domain: hcp03
+        role: domain_support_tools_viewer
 
   - name: hec
     groups:
@@ -374,6 +395,10 @@ spec:
       - domain: hec
         role: cloud_support_tools_viewer
         inherited: true
+    - name: HEC_SUPPORT_TOOL_VIEWERS
+      roles:
+      - domain: hec
+        role: domain_support_tools_viewer
 
   - name: monsoon3
     groups:
@@ -412,6 +437,10 @@ spec:
       - domain: monsoon3
         role: cloud_support_tools_viewer
         inherited: true
+    - name: MONSOON3_SUPPORT_TOOL_VIEWERS
+      roles:
+      - domain: monsoon3
+        role: domain_support_tools_viewer
 
   - name: neo
     groups:
@@ -450,6 +479,10 @@ spec:
       - domain: neo
         role: cloud_support_tools_viewer
         inherited: true
+    - name: NEO_SUPPORT_TOOL_VIEWERS
+      roles:
+      - domain: neo
+        role: domain_support_tools_viewer
 
   - name: s4
     groups:
@@ -488,6 +521,10 @@ spec:
       - domain: s4
         role: cloud_support_tools_viewer
         inherited: true
+    - name: S4_SUPPORT_TOOL_VIEWERS
+      roles:
+      - domain: s4
+        role: domain_support_tools_viewer
 
   - name: wbs
     groups:
@@ -526,3 +563,7 @@ spec:
       - domain: wbs
         role: cloud_support_tools_viewer
         inherited: true
+    - name: WBS_SUPPORT_TOOL_VIEWERS
+      roles:
+      - domain: wbs
+        role: domain_support_tools_viewer
