--- a/openstack/castellum/values.yaml
+++ b/openstack/castellum/values.yaml
@@ -6,6 +6,11 @@ castellum:
   service_user:
     password: DEFINED_IN_VALUES_FILE
 
+  # Set to non-empty values to enable audit logging to Hermes.
+  rabbitmq:
+    uri: ""
+    queue_name: ""
+
   # # Whether to apply resource requests/limits to containers.
   # resources:
   #   enabled: false
