--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -356,3 +356,9 @@ alerts:
   enabled: true
   # Name of the Prometheus to which the alerts should be assigned to.
   prometheus: openstack
+
+# Deploy Keystone Prometheus aggregations.
+aggregations:
+  enabled: false
+  # Name of the Prometheus to which the aggregations should be assigned to.
+  prometheus: openstack
