vasa-exporter to be scraped by prometheus-infra-collector

--- a/openstack/vcenter-utilities/templates/vasa-exporter-deployment.yaml
+++ b/openstack/vcenter-utilities/templates/vasa-exporter-deployment.yaml
@@ -14,6 +14,10 @@ template: |{{`
     labels:
       system: openstack
       service: metrics
+    annotations:
+      prometheus.io/scrape: "true"
+      prometheus.io/targets: "infra-collector"
+      prometheus.io/port: `}}{{ .Values.vasa_exporter.prometheus_port | quote }}
   
   spec:
     replicas: 1
