--- a/openstack/vcenter-utilities/templates/vasa-exporter-service.yaml
+++ b/openstack/vcenter-utilities/templates/vasa-exporter-service.yaml
@@ -17,6 +17,7 @@ template: |{{`
       component: vasa-exporter-{{ name }}
     annotations:
       prometheus.io/scrape: "true"
+      prometheus.io/targets: "infra-collector"
       prometheus.io/port: `}}{{ .Values.vasa_exporter.prometheus_port | quote }}{{`
   spec:
     selector:
