add extra app label to vasa-exporter to federate metrics

--- a/openstack/vcenter-utilities/templates/vasa-exporter-deployment.yaml
+++ b/openstack/vcenter-utilities/templates/vasa-exporter-deployment.yaml
@@ -12,6 +12,7 @@ template: |{{`
     name: vasa-exporter-{{ name }}
     namespace: monsoon3
     labels:
+      app: vasa-exporter
       system: openstack
       service: metrics
     annotations:
