[vasa-exporter] fix vcenteroperator templating

--- a/openstack/vcenter-utilities/templates/vasa-exporter-deployment.yaml
+++ b/openstack/vcenter-utilities/templates/vasa-exporter-deployment.yaml
@@ -18,7 +18,7 @@ template: |{{`
     annotations:
       prometheus.io/scrape: "true"
       prometheus.io/targets: "infra-collector"
-      prometheus.io/port: `}}{{ .Values.vasa_exporter.prometheus_port | quote }}
+      prometheus.io/port: `}}{{ .Values.vasa_exporter.prometheus_port | quote }}{{`
   
   spec:
     replicas: 1
