[mariadb] set default sql_mode to traditional

--- a/common/mariadb/templates/etc-configmap.yaml
+++ b/common/mariadb/templates/etc-configmap.yaml
@@ -14,3 +14,4 @@ data:
     max_connections	    = 250
     innodb_buffer_pool_size = 512M
     innodb_open_files       = 1000
+    sql_mode                = "TRADITIONAL"
