[barbican] claim name and dependent services adjusted for mariadb

--- a/openstack/barbican/templates/migration-job.yaml
+++ b/openstack/barbican/templates/migration-job.yaml
@@ -22,7 +22,7 @@ spec:
             - name: NAMESPACE
               value: {{ .Release.Namespace }}
             - name: DEPENDENCY_SERVICE
-              value: "barbican-postgresql"
+              value: "barbican-mariadb"
           volumeMounts:
             - name: etcbarbican
               mountPath: /etc/barbican
