--- a/openstack/barbican/values.yaml
+++ b/openstack/barbican/values.yaml
@@ -40,7 +40,7 @@ mariadb:
   enabled: false
   name: barbican
   initdb_configmap: barbican-initdb
-  persistence_claim: barbican-db-pvclaim
+  persistence_claim: db-barbican-pvclaim
 
 mysql_metrics:
   db_name: barbican
