--- a/openstack/barbican/templates/api-deployment.yaml
+++ b/openstack/barbican/templates/api-deployment.yaml
@@ -49,7 +49,7 @@ spec:
             - name: DEPENDENCY_JOBS
               value: "barbican-migration"
             - name: DEPENDENCY_SERVICE
-              value: "barbican-postgresql,barbican-rabbitmq"
+              value: "barbican-mariadb,barbican-rabbitmq"
             {{- if .Values.sentry.enabled }}
             - name: SENTRY_DSN
               valueFrom:
